...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_movie_container" />

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="8dp"
        android:maxLines="2"
...
        app:layout_constraintEnd_toEndOf="@+id/ph_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ph_date"
        app:layout_constraintTop_toBottomOf="@+id/ph_date" />

    <TextView
        android:id="@+id/tv_detail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/ph_date"
        app:layout_constraintEnd_toEndOf="@+id/tv_detail_title"
...
