<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Jetpack Dicoding</string>

    <string name="tab_movie">Movie</string>
    <string name="tab_tv">TV Show</string>

    <string name="title_detail_overview">Overview</string>
    <string name="title_detail_genre">Genre :</string>
    <string name="title_detail_status">Status :</string>
    <string name="title_detail_date">Release Date :</string>
    <string name="title_activity_detail_content">Detail Information</string>

    <string name="desc_movie_img_poster">Poster of the movie or tv show</string>
    <string name="desc_movie_container">this is container to display detail about the movie or tv show</string>
    <string name="desc_img_poster">this is poster of the movie or tv show</string>
    <string name="title_detail_time">Runtime :</string>

    <!-- The runtime format -->
    <string name="format_runtime">
        <xliff:g id="hours">%01d</xliff:g>h\u0020
        <xliff:g id="minutes">%01d</xliff:g>m
    </string>
    <string name="format_runtime_hours">
        <xliff:g id="hours">%01d</xliff:g>h
    </string>
    <string name="desc_movie_backdrop">Bacdrop of the movie</string>
</resources>
